// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render default component 1`] = `
Array [
  "metrics",
  <div
    className="portal-workflow-metrics-app"
  >
    <nav
      className="management-bar management-bar-light navbar navbar-expand-md"
    >
      <div
        className="container-fluid container-fluid-max-xl"
      >
        <div
          className="navbar-form navbar-form-autofit"
        >
          <div
            className="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down show"
          >
            <div
              className="container-fluid container-fluid-max-xl"
            >
              <form
                method="GET"
                onSubmit={[Function]}
                role="search"
              >
                <div
                  className="input-group"
                >
                  <div
                    className="input-group-item"
                  >
                    <input
                      aria-label="Search"
                      className="form-control form-control input-group-inset input-group-inset-after"
                      disabled={false}
                      onChange={[Function]}
                      placeholder="search-for"
                      type="text"
                      value=""
                    />
                    <span
                      className="input-group-inset-item input-group-inset-item-after"
                    >
                      <button
                        className="navbar-breakpoint-d-none btn btn-monospaced btn-unstyled"
                        type="button"
                      >
                        <svg
                          className="lexicon-icon lexicon-icon-times"
                          role="presentation"
                        >
                          <use
                            xlinkHref="//lexicon/icons.svg#times"
                          />
                        </svg>
                      </button>
                      <button
                        className="btn btn-monospaced btn-unstyled"
                        type="submit"
                      >
                        <svg
                          className="lexicon-icon lexicon-icon-search"
                          role="presentation"
                        >
                          <use
                            xlinkHref="//lexicon/icons.svg#search"
                          />
                        </svg>
                      </button>
                    </span>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </nav>
    
    <div
      className="container-fluid-1280"
    >
      <div
        className="border-1 pb-6 pt-6 sheet"
        data-testid="loadingState"
      >
        <span
          aria-hidden="true"
          className="loading-animation"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Should render default component without custom header 1`] = `
<div
  className="portal-workflow-metrics-app"
>
  <nav
    className="management-bar management-bar-light navbar navbar-expand-md"
  >
    <div
      className="container-fluid container-fluid-max-xl"
    >
      <div
        className="navbar-form navbar-form-autofit"
      >
        <div
          className="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down show"
        >
          <div
            className="container-fluid container-fluid-max-xl"
          >
            <form
              method="GET"
              onSubmit={[Function]}
              role="search"
            >
              <div
                className="input-group"
              >
                <div
                  className="input-group-item"
                >
                  <input
                    aria-label="Search"
                    className="form-control form-control input-group-inset input-group-inset-after"
                    disabled={false}
                    onChange={[Function]}
                    placeholder="search-for"
                    type="text"
                    value=""
                  />
                  <span
                    className="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      className="navbar-breakpoint-d-none btn btn-monospaced btn-unstyled"
                      type="button"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-times"
                        role="presentation"
                      >
                        <use
                          xlinkHref="//lexicon/icons.svg#times"
                        />
                      </svg>
                    </button>
                    <button
                      className="btn btn-monospaced btn-unstyled"
                      type="submit"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-search"
                        role="presentation"
                      >
                        <use
                          xlinkHref="//lexicon/icons.svg#search"
                        />
                      </svg>
                    </button>
                  </span>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </nav>
  
  <div
    className="container-fluid-1280"
  >
    <div
      className="border-1 pb-6 pt-6 sheet"
      data-testid="loadingState"
    >
      <span
        aria-hidden="true"
        className="loading-animation"
      />
    </div>
  </div>
</div>
`;
